code/spring-boot-k8s-demo/demo-app/k8s/2-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-app-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  namespace: default
spec:
  rules:
  - host: demo-app.demo.tdlabs.k8s
    http:
      paths:
      - backend:
          serviceName: demo-app-service
          servicePort: 8080
        path: /
